Bug 172525 [ps] print legal size page fails to set '<< /PageSize [612 1008] >> setpagedevice' patch by kjh-5727@comcast.net r=timeless sr=tor